main.css
/* ... */
.details__title {
  font-size: 1.7em;
  margin-bottom: 1rem;
}
.details__description {
  font-size: 0.94em;
  color: hsl(219, 9%, 45%);
  line-height: 1.5rem;
  margin-bottom: 1.5rem;
}
.details__prices {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 1.5rem;
}
.details__product-quantity {
  display: flex;
  flex-flow: column;
  gap: 0.3rem;
}
.details__now {
  font-size: 1.8em;
  font-weight: 700;
  display: flex;
  align-items: center;
  gap: 1rem;
}
.details__discount {
  font-size: 0.5em;
  background-color: hsl(25, 100%, 94%);
  color: hsl(26, 100%, 55%);
  padding: 0.25rem;
  border: 0.25rem;
}
.details__before {
  font-weight: 700;
  color: hsl(219, 9%, 45%);
  text-decoration: line-through;
}
.details__button {
  background-color: hsl(26, 100%, 55%);
  width: 100%;
  padding: 5px;
  height: 3.5625rem;
  border-radius: 0.5rem;
  border: none;
  color: hsl(0, 0%, 100%);
  font-size: 0.9em;
  font-weight: 700;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}
.details__button:hover {
  cursor: pointer;
  opacity: 0.85;
}
@media (min-width: 1115px) {
  .details {
    width: 55.5%;
    padding-top: 5.4%;
  }
  .details__title {
    font-size: 2.7em;
    margin-bottom: 3rem;
  }
  .details__description {
    font-size: 0.9em;
    margin-bottom: 2.25rem;
  }
  .details__prices {
    flex-direction: column;
    align-items: flex-start;
  }
  .details__product-quantity {
    display: flex;
    gap: 2rem;
  }
}

.input {
  height: 7.7vh;
  display: flex;
  justify-content: space-between;
  background-color: hsl(223, 64%, 98%);
  border-radius: 0.5rem;
  padding: 0 13px;
}
.input__minus {
  width: 1.5rem;
  height: 100%;
  padding: 3.5vh 0.1vh;
}
.input__minus:hover {
  cursor: pointer;
}
.input__number {
  background-color: hsl(223, 64%, 98%);
  width: 100%;
  border: none;
  font-size: 1.2em;
  font-weight: 700;
  font-family: "Kumbh Sans", sans-serif;
  text-align: center;
  outline: none;
}
.input__plus {
  width: 1.5rem;
  height: 100%;
  padding: 2.5vh 0.1vh;
}
.input__plus:hover {
  cursor: pointer;
}

.cart-modal {
  display: none;
  width: 360px;
  border-radius: 0.5rem;
  box-shadow: 3px 3px 10px;
  min-height: 260px;
  top: 50px;
  right: 195px;
  position: absolute;
  background-color: hsl(0, 0%, 100%);
}
@media (min-width: 1150px) {
  .cart-modal {
    top: 80px;
    right: 270px;
  }
}
.cart-modal__title {
  font-weight: 700;
  padding: 1.5rem;
  border-bottom: 2px solid hsl(223, 64%, 98%);
}
.cart-modal__checkout-container {
  display: flex;
  flex-flow: column;
  padding: 1.5rem;
  overflow-y: auto;
  max-height: 230px;
}
.cart-modal__checkout-container::-webkit-scrollbar {
  width: 8px;
}
.cart-modal__details-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 1.5rem;
  color: hsl(219, 9%, 45%);
}
.cart-modal__details-container:last-child {
  margin-bottom: 0;
}
.cart-modal__image {
  width: 17%;
  border-radius: 0.25rem;
}
.cart-modal__price span {
  color: hsl(0, 0%, 0%);
  font-weight: 700;
}
.cart-modal__delete:hover {
  cursor: pointer;
}
.cart-modal__checkout {
  background-color: hsl(26, 100%, 55%);
  width: 100%;
  padding: 5px;
  height: 3.5625rem;
  border-radius: 0.5rem;
  border: none;
  color: hsl(0, 0%, 100%);
  font-size: 0.9em;
  font-weight: 700;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  width: 336px;
  margin: auto;
  margin-bottom: 0.5rem;
  display: none;
}
.cart-modal__checkout:hover {
  cursor: pointer;
  opacity: 0.85;
}

.modal-gallery {
  width: 550px;
  height: 100%;
}
.modal-gallery__background {
  display: none;
  background-color: hsla(0, 0%, 0%, 0.5);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  display: none;
  place-content: center;
}
.modal-gallery__close-container {
  text-align: right;
  height: 30px;
}
.modal-gallery__close {
  width: 1rem;
}
.modal-gallery__close:hover {
  cursor: pointer;
  content: url("../images/icon-close-white.svg");
}
.modal-gallery__image-container {
  position: relative;
  background-image: url("https://res.cloudinary.com/vegadelalyra/image/upload/w_1000,ar_1:1,c_fill,g_auto,e_art:hokusai/v1689613379/sprint2/1/image-product-1.jpg");
  height: 446px;
  background-size: cover;
  border-radius: 1rem;
  margin-bottom: 2rem;
}
.modal-gallery__thumbnails {
  display: flex;
  justify-content: space-between;
  width: 450px;
  margin: auto;
}
.modal-gallery__thumbnail {
  height: 90px;
  width: 90px;
  border-radius: 1rem;
}
.modal-gallery__thumbnail:hover {
  cursor: pointer;
  border: 3px solid hsl(26, 100%, 55%);
  filter: brightness(1.2);
  transition: filter 0.33s;
}
.modal-gallery__previous {
  background-color: hsl(0, 0%, 100%);
  width: 40px;
  height: 40px;
  padding: 12px;
  border-radius: 50%;
  position: absolute;
  top: 110px;
  left: -20px;
}
.modal-gallery__previous:hover {
  cursor: pointer;
}
@media (min-width: 1115px) {
  .modal-gallery__previous {
    top: 200px;
  }
}
.modal-gallery__next {
  background-color: hsl(0, 0%, 100%);
  width: 40px;
  height: 40px;
  padding: 12px;
  border-radius: 50%;
  position: absolute;
  top: 110px;
  left: 525px;
}
.modal-gallery__next:hover {
  cursor: pointer;
}
@media (min-width: 1115px) {
  .modal-gallery__next {
    top: 200px;
  }
}

.content-container {
  margin-top: 10px;
  background-color: hsla(0, 0%, 0%, 0.5);
  display: grid;
  height: 100%;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(auto-fit, 1fr);
  justify-content: center;
  align-content: stretch;
  justify-items: center;
  column-gap: 10px;
  row-gap: 10px;
}
.content-container__items {
  height: 100%;
  width: 100%;
}
.content-container__items img {
  width: 100%;
  height: 100%;
}
@media (min-width: 1115px) {
  .content-container {
    grid-template-columns: repeat(3, 1fr);
  }
}
/* ... */

